--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: graysonnet
 github_username:  G-sharp
 
 # Build settings
-theme: minima
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
