--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Moonwalk
+title: Nomad Island 
 author: Gsharp
 url: https://g-sharp.github.io # root address of the site
 description: > # description of the site (multiple lines allowed)
