--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,8 +5,6 @@ navbar_entries:
   - title: blog
     url: blog
 
-  - title: website
-    url: https://www.abhinav.co
 
 project_entries:
   - title: Project 1
@@ -54,14 +52,11 @@ old_project_entries:
     desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: abhinav's homepage
-    url: https://www.abhinav.co
-
-  - title: twitter
-    url: https://twitter.com/abhinav
+  - title: gsharp's homepage
+    url: https://g-sharp.github.io
 
   - title: github
-    url: https://github.com/abhinavs
+    url: https://github.com/g-sharp
 
   - title: feed
     url: feed.xml
@@ -97,5 +92,3 @@ misc_entries:
 
           - title: it is easy to use, see _data/home.yml to see how to configure it.
             url: false
-
-
